--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.resx
@@ -5440,6 +5440,16 @@ The Query Processor estimates that implementing the following index could improv
     <value>I have read the summary and understand the potential risks.</value>
     <comment></comment>
   </data>
+  <data name="TableDesignerCreateTablePermissionDenied" xml:space="preserve">
+    <value>CREATE TABLE permission denied in database &apos;{0}&apos;.</value>
+    <comment>.
+ Parameters: 0 - db (string) </comment>
+  </data>
+  <data name="TableDesignerAlterTablePermissionDenied" xml:space="preserve">
+    <value>ALTER TABLE permission denied for table &apos;{0}&apos;.</value>
+    <comment>.
+ Parameters: 0 - table (string) </comment>
+  </data>
   <data name="SqlProjectModelNotFound" xml:space="preserve">
     <value>Could not find SQL model from project: {0}.</value>
     <comment>.
