--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -2813,3 +2813,9 @@ GeneralPurposeAzureEdition = General Purpose
 BusinessCriticalAzureEdition = Business Critical
 ErrorInvalidEdition = Edition value is not valid
 HyperscaleAzureEdition = Hyperscale
+
+#############################################################################
+# Server Properties
+
+############################################################################
+PropertyNotInitialized(string propertyName) = Property '{0}' was set before initialization.
