--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.es.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.es.resx
@@ -5059,4 +5059,13 @@ El procesador de consultas estima que la implementación del siguiente índice p
   <data name="databaseBackupDate_None" xml:space="preserve">
     <value>Ninguno</value>
   </data>
+  <data name="PropertyNotInitialized" xml:space="preserve">
+    <value>La propiedad '{0}' se estableció antes de la inicialización.</value>
+  </data>
+  <data name="TableDesignerCreateTablePermissionDenied" xml:space="preserve">
+    <value>Se ha denegado el permiso CREATE TABLE en la base de datos '{0}'.</value>
+  </data>
+  <data name="TableDesignerAlterTablePermissionDenied" xml:space="preserve">
+    <value>Se ha denegado el permiso ALTER TABLE en la tabla '{0}'.</value>
+  </data>
 </root>
