--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.fr.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.fr.resx
@@ -5059,4 +5059,13 @@ Le processeur de requêtes estime que l'implémentation de l'index suivant peut 
   <data name="databaseBackupDate_None" xml:space="preserve">
     <value>Aucun</value>
   </data>
+  <data name="PropertyNotInitialized" xml:space="preserve">
+    <value>La propriété '{0}' a été définie avant l’initialisation.</value>
+  </data>
+  <data name="TableDesignerCreateTablePermissionDenied" xml:space="preserve">
+    <value>CREATE TABLE autorisation refusée dans la base de données «{0}».</value>
+  </data>
+  <data name="TableDesignerAlterTablePermissionDenied" xml:space="preserve">
+    <value>Autorisation ALTER TABLE refusée pour la table «{0}».</value>
+  </data>
 </root>
