--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.zh-Hant.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.zh-Hant.resx
@@ -5059,4 +5059,13 @@
   <data name="databaseBackupDate_None" xml:space="preserve">
     <value>無</value>
   </data>
+  <data name="PropertyNotInitialized" xml:space="preserve">
+    <value>初始化之前已設定屬性 '{0}'。</value>
+  </data>
+  <data name="TableDesignerCreateTablePermissionDenied" xml:space="preserve">
+    <value>資料庫 '{0}' 中 CREATE TABLE 權限遭拒。</value>
+  </data>
+  <data name="TableDesignerAlterTablePermissionDenied" xml:space="preserve">
+    <value>資料表 '{0}' 的 ALTER TABLE 權限遭拒。</value>
+  </data>
 </root>
