--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.es.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.es.xlf
@@ -8321,6 +8321,23 @@ El procesador de consultas estima que la implementación del siguiente índice p
         <target state="translated">Ninguno</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="PropertyNotInitialized">
+        <source>Property '{0}' was set before initialization.</source>
+        <target state="translated">La propiedad '{0}' se estableció antes de la inicialización.</target>
+        <note>.
+ Parameters: 0 - propertyName (string) </note>
+      </trans-unit>
+      <trans-unit id="TableDesignerCreateTablePermissionDenied">
+        <source>CREATE TABLE permission denied in database '{0}'.</source>
+        <target state="translated">Se ha denegado el permiso CREATE TABLE en la base de datos '{0}'.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="TableDesignerAlterTablePermissionDenied">
+        <source>ALTER TABLE permission denied for table '{0}'.</source>
+        <target state="translated">Se ha denegado el permiso ALTER TABLE en la tabla '{0}'.</target>
+        <note>.
+ Parameters: 0 - table (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
