--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.fr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.fr.xlf
@@ -8321,6 +8321,23 @@ Le processeur de requêtes estime que l'implémentation de l'index suivant peut 
         <target state="translated">Aucun</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="PropertyNotInitialized">
+        <source>Property '{0}' was set before initialization.</source>
+        <target state="translated">La propriété '{0}' a été définie avant l’initialisation.</target>
+        <note>.
+ Parameters: 0 - propertyName (string) </note>
+      </trans-unit>
+      <trans-unit id="TableDesignerCreateTablePermissionDenied">
+        <source>CREATE TABLE permission denied in database '{0}'.</source>
+        <target state="translated">CREATE TABLE autorisation refusée dans la base de données «{0}».</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="TableDesignerAlterTablePermissionDenied">
+        <source>ALTER TABLE permission denied for table '{0}'.</source>
+        <target state="translated">Autorisation ALTER TABLE refusée pour la table «{0}».</target>
+        <note>.
+ Parameters: 0 - table (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
