--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.it.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.it.xlf
@@ -8321,6 +8321,23 @@ Query Processor stima che l'implementazione del seguente indice potrebbe miglior
         <target state="translated">Nessuno</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="PropertyNotInitialized">
+        <source>Property '{0}' was set before initialization.</source>
+        <target state="translated">Proprietà '{0}' impostata prima dell'inizializzazione.</target>
+        <note>.
+ Parameters: 0 - propertyName (string) </note>
+      </trans-unit>
+      <trans-unit id="TableDesignerCreateTablePermissionDenied">
+        <source>CREATE TABLE permission denied in database '{0}'.</source>
+        <target state="translated">Autorizzazione CREATE TABLE negata nel database '{0}'.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="TableDesignerAlterTablePermissionDenied">
+        <source>ALTER TABLE permission denied for table '{0}'.</source>
+        <target state="translated">Autorizzazione ALTER TABLE negata per la tabella '{0}'.</target>
+        <note>.
+ Parameters: 0 - table (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
