--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.pt-br.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.pt-br.xlf
@@ -8321,6 +8321,23 @@ O Processador de Consultas estima que a implementação do índice a seguir pode
         <target state="translated">Nenhum</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="PropertyNotInitialized">
+        <source>Property '{0}' was set before initialization.</source>
+        <target state="translated">A propriedade '{0}' foi definida antes da inicialização.</target>
+        <note>.
+ Parameters: 0 - propertyName (string) </note>
+      </trans-unit>
+      <trans-unit id="TableDesignerCreateTablePermissionDenied">
+        <source>CREATE TABLE permission denied in database '{0}'.</source>
+        <target state="translated">Permissão CRIAR TABLE negada no banco de dados '{0}'.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="TableDesignerAlterTablePermissionDenied">
+        <source>ALTER TABLE permission denied for table '{0}'.</source>
+        <target state="translated">Permissão ALTERAR TABLE negada na tabela '{0}'.</target>
+        <note>.
+ Parameters: 0 - table (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
