--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -8338,6 +8338,11 @@ The Query Processor estimates that implementing the following index could improv
         <note>.
  Parameters: 0 - table (string) </note>
       </trans-unit>
+      <trans-unit id="ConnectionServiceServerlessConnectionTimedOut">
+        <source>Serverless database '{0}' refused to wake up and connect after multiple retries.</source>
+        <target state="new">Serverless database '{0}' refused to wake up and connect after multiple retries.</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
