--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.resx
@@ -6706,6 +6706,14 @@ The Query Processor estimates that implementing the following index could improv
     <value>PRIMARY</value>
     <comment></comment>
   </data>
+  <data name="prototype_db_prop_databasescopedconfig_value_when_supported" xml:space="preserve">
+    <value>WHEN_SUPPORTED </value>
+    <comment></comment>
+  </data>
+  <data name="prototype_db_prop_databasescopedconfig_value_fail_supported" xml:space="preserve">
+    <value>FAIL_UNSUPPORTED</value>
+    <comment></comment>
+  </data>
   <data name="error_db_prop_invalidleadingColumns" xml:space="preserve">
     <value>For the distribution policy HASH, the number of leading hash columns is optional but should be from 1 to 16 columns</value>
     <comment></comment>
@@ -6767,7 +6775,7 @@ The Query Processor estimates that implementing the following index could improv
     <comment></comment>
   </data>
   <data name="databaseBackupDate_None" xml:space="preserve">
-    <value>None</value>
+    <value>None </value>
     <comment></comment>
   </data>
   <data name="BasicAzureEdition" xml:space="preserve">
