--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -8317,8 +8317,8 @@ The Query Processor estimates that implementing the following index could improv
         <note></note>
       </trans-unit>
       <trans-unit id="databaseBackupDate_None">
-        <source>None</source>
-        <target state="new">None</target>
+        <source>None </source>
+        <target state="new">None </target>
         <note></note>
       </trans-unit>
       <trans-unit id="PropertyNotInitialized">
@@ -8337,6 +8337,16 @@ The Query Processor estimates that implementing the following index could improv
         <target state="new">ALTER TABLE permission denied for table '{0}'.</target>
         <note>.
  Parameters: 0 - table (string) </note>
+      </trans-unit>
+      <trans-unit id="prototype_db_prop_databasescopedconfig_value_when_supported">
+        <source>WHEN_SUPPORTED </source>
+        <target state="new">WHEN_SUPPORTED </target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="prototype_db_prop_databasescopedconfig_value_fail_supported">
+        <source>FAIL_UNSUPPORTED</source>
+        <target state="new">FAIL_UNSUPPORTED</target>
+        <note></note>
       </trans-unit>
     </body>
   </file>
