--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.it.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.it.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">Schema e dati</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">Si è verificato un errore durante l'analisi della proprietà ScriptingParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">La directory specificata dalla proprietà ScriptingParams.FilePath non è valida.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">Si è verificato un errore durante l'analisi della proprietà ScriptingListObjectsCompleteParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="translated">--TODO: impostare qui i valori dei parametri.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">Si è verificato un errore durante lo scripting degli oggetti.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">Lo scripting come Execute è supportato solo per le stored procedure</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
