--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.zh-Hant.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.zh-Hant.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">結構描述及資料</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">剖析屬性 ScriptingParams.ConnectionString 時發生錯誤</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">ScriptingParams.FilePath 屬性指定的路徑是無效目錄。</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">剖析屬性 ScriptingListObjectsCompleteParams.ConnectionString 時發生錯誤</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="translated">-- TODO: 在此處設定參數值。</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">編寫物件指令碼時發生錯誤。</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">僅預存程序支援指令碼執行</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
