--- a/src/Microsoft.SqlTools.SqlCore/Localization/sr.de.resx
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/sr.de.resx
@@ -753,4 +753,22 @@
   <data name="FilterDurabilitySchemaAndData" xml:space="preserve">
     <value>Schema und Daten</value>
   </data>
+  <data name="ScriptingParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Fehler beim Analysieren der ScriptingParams.ConnectionString-Eigenschaft.</value>
+  </data>
+  <data name="ScriptingParams_FilePath_Property_Invalid" xml:space="preserve">
+    <value>Durch die ScriptingParams.FilePath-Eigenschaft wurde ein ungültiges Verzeichnis angegeben.</value>
+  </data>
+  <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Fehler beim Analysieren der ScriptingListObjectsCompleteParams.ConnectionString -Eigenschaft.</value>
+  </data>
+  <data name="StoredProcedureScriptParameterComment" xml:space="preserve">
+    <value>--TODO: Hier Parameterwerte festlegen.</value>
+  </data>
+  <data name="ScriptingGeneralError" xml:space="preserve">
+    <value>Fehler bei der Skripterstellung für die Objekte.</value>
+  </data>
+  <data name="ScriptingExecuteNotSupportedError" xml:space="preserve">
+    <value>Eine Skripterstellung zur Ausführung wird nur für gespeicherte Prozeduren unterstützt.</value>
+  </data>
 </root>
