--- a/src/Microsoft.SqlTools.SqlCore/Localization/sr.es.resx
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/sr.es.resx
@@ -753,4 +753,22 @@
   <data name="FilterDurabilitySchemaAndData" xml:space="preserve">
     <value>Esquema y datos</value>
   </data>
+  <data name="ScriptingParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Error al analizar la propiedad ScriptingParams.ConnectionString.</value>
+  </data>
+  <data name="ScriptingParams_FilePath_Property_Invalid" xml:space="preserve">
+    <value>El directorio que especifica la propiedad ScriptingParams.FilePath no es válido.</value>
+  </data>
+  <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Error al analizar la propiedad ScriptingListObjectsCompleteParams.ConnectionString.</value>
+  </data>
+  <data name="StoredProcedureScriptParameterComment" xml:space="preserve">
+    <value>-- TODO: Establezca los valores de los parámetros aquí.</value>
+  </data>
+  <data name="ScriptingGeneralError" xml:space="preserve">
+    <value>Error al crear scripts de los objetos.</value>
+  </data>
+  <data name="ScriptingExecuteNotSupportedError" xml:space="preserve">
+    <value>La generación de scripts durante la ejecución solo se admite para los procedimientos almacenados.</value>
+  </data>
 </root>
