--- a/src/Microsoft.SqlTools.SqlCore/Localization/sr.it.resx
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/sr.it.resx
@@ -753,4 +753,22 @@
   <data name="FilterDurabilitySchemaAndData" xml:space="preserve">
     <value>Schema e dati</value>
   </data>
+  <data name="ScriptingParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Si è verificato un errore durante l'analisi della proprietà ScriptingParams.ConnectionString.</value>
+  </data>
+  <data name="ScriptingParams_FilePath_Property_Invalid" xml:space="preserve">
+    <value>La directory specificata dalla proprietà ScriptingParams.FilePath non è valida.</value>
+  </data>
+  <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Si è verificato un errore durante l'analisi della proprietà ScriptingListObjectsCompleteParams.ConnectionString.</value>
+  </data>
+  <data name="StoredProcedureScriptParameterComment" xml:space="preserve">
+    <value>--TODO: impostare qui i valori dei parametri.</value>
+  </data>
+  <data name="ScriptingGeneralError" xml:space="preserve">
+    <value>Si è verificato un errore durante lo scripting degli oggetti.</value>
+  </data>
+  <data name="ScriptingExecuteNotSupportedError" xml:space="preserve">
+    <value>Lo scripting come Execute è supportato solo per le stored procedure</value>
+  </data>
 </root>
