--- a/src/Microsoft.SqlTools.SqlCore/Localization/sr.pt-BR.resx
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/sr.pt-BR.resx
@@ -753,4 +753,22 @@
   <data name="FilterDurabilitySchemaAndData" xml:space="preserve">
     <value>Esquema e Dados</value>
   </data>
+  <data name="ScriptingParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Erro ao analisar a propriedade ScriptingParams.ConnectionString.</value>
+  </data>
+  <data name="ScriptingParams_FilePath_Property_Invalid" xml:space="preserve">
+    <value>Diretório inválido especificado pela propriedade ScriptingParams.FilePath.</value>
+  </data>
+  <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Erro ao analisar a propriedade ScriptingListObjectsCompleteParams.ConnectionString.</value>
+  </data>
+  <data name="StoredProcedureScriptParameterComment" xml:space="preserve">
+    <value>--TODO: defina os valores de parâmetro aqui.</value>
+  </data>
+  <data name="ScriptingGeneralError" xml:space="preserve">
+    <value>Ocorreu um erro ao gerar o script dos objetos.</value>
+  </data>
+  <data name="ScriptingExecuteNotSupportedError" xml:space="preserve">
+    <value>A função de criação de script ao executar é compatível apenas com os procedimentos armazenados</value>
+  </data>
 </root>
