--- a/src/Microsoft.SqlTools.SqlCore/Localization/sr.ru.resx
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/sr.ru.resx
@@ -753,4 +753,22 @@
   <data name="FilterDurabilitySchemaAndData" xml:space="preserve">
     <value>Схема и данные</value>
   </data>
+  <data name="ScriptingParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Ошибка при анализе свойства ScriptingParams.ConnectionString.</value>
+  </data>
+  <data name="ScriptingParams_FilePath_Property_Invalid" xml:space="preserve">
+    <value>В свойстве ScriptingParams.FilePath указан недопустимый каталог.</value>
+  </data>
+  <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
+    <value>Ошибка при анализе свойства ScriptingListObjectsCompleteParams.ConnectionString.</value>
+  </data>
+  <data name="StoredProcedureScriptParameterComment" xml:space="preserve">
+    <value>-- TODO: Set parameter values here.</value>
+  </data>
+  <data name="ScriptingGeneralError" xml:space="preserve">
+    <value>Ошибка при выполнении скрипта с данными объектами.</value>
+  </data>
+  <data name="ScriptingExecuteNotSupportedError" xml:space="preserve">
+    <value>Скрипты при выполнении поддерживаются только для хранимых процедур</value>
+  </data>
 </root>
