--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.de.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.de.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">Schema und Daten</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">Fehler beim Analysieren der ScriptingParams.ConnectionString-Eigenschaft.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">Durch die ScriptingParams.FilePath-Eigenschaft wurde ein ungültiges Verzeichnis angegeben.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">Fehler beim Analysieren der ScriptingListObjectsCompleteParams.ConnectionString -Eigenschaft.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="translated">--TODO: Hier Parameterwerte festlegen.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">Fehler bei der Skripterstellung für die Objekte.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">Eine Skripterstellung zur Ausführung wird nur für gespeicherte Prozeduren unterstützt.</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
