--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.es.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.es.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">Esquema y datos</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">Error al analizar la propiedad ScriptingParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">El directorio que especifica la propiedad ScriptingParams.FilePath no es válido.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">Error al analizar la propiedad ScriptingListObjectsCompleteParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="translated">-- TODO: Establezca los valores de los parámetros aquí.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">Error al crear scripts de los objetos.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">La generación de scripts durante la ejecución solo se admite para los procedimientos almacenados.</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
