--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.ko.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.ko.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">스키마 및 데이터</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">ScriptingParams.ConnectionString 속성을 분석하는 동안 오류가 발생했습니다.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">ScriptingParams.FilePath 속성에 잘못된 디렉터리를 지정했습니다.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">ScriptingListObjectsCompleteParams.ConnectionString 속성을 분석하는 동안 오류가 발생했습니다.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="translated">-- TODO: 여기에서 매개 변수 값을 설정합니다.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">개체를 스크립팅하는 동안 오류가 발생했습니다.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">저장 프로시저에만 실행으로 스크립팅할 수 있습니다.</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
