--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.pt-BR.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.pt-BR.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">Esquema e Dados</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">Erro ao analisar a propriedade ScriptingParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">Diretório inválido especificado pela propriedade ScriptingParams.FilePath.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">Erro ao analisar a propriedade ScriptingListObjectsCompleteParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="translated">--TODO: defina os valores de parâmetro aqui.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">Ocorreu um erro ao gerar o script dos objetos.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">A função de criação de script ao executar é compatível apenas com os procedimentos armazenados</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
