--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.ru.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.ru.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">Схема и данные</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">Ошибка при анализе свойства ScriptingParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">В свойстве ScriptingParams.FilePath указан недопустимый каталог.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">Ошибка при анализе свойства ScriptingListObjectsCompleteParams.ConnectionString.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="new">-- TODO: Set parameter values here.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">Ошибка при выполнении скрипта с данными объектами.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">Скрипты при выполнении поддерживаются только для хранимых процедур</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
