--- a/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.zh-Hans.xlf
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/transXliff/sr.zh-Hans.xlf
@@ -1062,6 +1062,36 @@
         <target state="translated">架构和数据</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ScriptingParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingParams.ConnectionString property.</source>
+        <target state="translated">解析 ScriptingParams.ConnectionString 属性时出错</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingParams_FilePath_Property_Invalid">
+        <source>Invalid directory specified by the ScriptingParams.FilePath property.</source>
+        <target state="translated">ScriptingParams.FilePath 属性指定的目录无效</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid">
+        <source>Error parsing ScriptingListObjectsCompleteParams.ConnectionString property.</source>
+        <target state="translated">解析 ScriptingListObjectsCompleteParams.ConnectionString 属性时出错</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="StoredProcedureScriptParameterComment">
+        <source>-- TODO: Set parameter values here.</source>
+        <target state="new">-- TODO: Set parameter values here.</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingGeneralError">
+        <source>An error occurred while scripting the objects.</source>
+        <target state="translated">编写对象脚本时出错。</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ScriptingExecuteNotSupportedError">
+        <source>Scripting as Execute is only supported for Stored Procedures</source>
+        <target state="translated">仅存储过程支持编写执行脚本</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
